    (https://github.com/bcgit/bc-java/issues/1363 and 1364)
  - added 32 bit PRNG based checksums which are known from Solaris 11 Express, OmniOS, SmartOS, and Tribblix:
    - PRNG hash
    - AST strsum PRNG hash
  - alternate implementation for blake3 provided by bouncy castle, the existing primary implementation still remains the
    primary, because it is slightly faster.

- updates:
  - documentation: added OpenIndiana to the compatibility lists.

- bug fixes:
  - CommonHashStatistics.java was not added to the repo which avoided the compilation
  - fixed the grammar in the manpage by using OpenAI's grammar correction


Jacksum 3.5.0, Jan 7, 2023

- new algorithms:
  - replaced own CRC engine by the BSD 3-clause licenced CRC engine java-crc 1.0.3 from S&K Software Development Ltd.,
    New Zealand (https://github.com/snksoft/java-crc) in order to benefit from the extra [1..7] CRC bit widths.
  - added CRC-82/DARC with aliases crc82, crc82_darc, crc-82, crc-82_darc
    (translated to Java from C-code that was written by Mark Adler)
  - added PHP's variants on Tiger called "tiger192,4", "tiger160,4", and "tiger128,4"
    by adjusting Bouncy Castle's TigerDigest slightly.
  - added legacy sum64

- new features:
  - make option --file-list recognizing GNU filename escaping
  - added "files-only" style with GNU filename escaping feature enabled in order to generate file lists
    that can be fed to Jacksum again
  - added "hexhashes-only" style to read and write files that contain hash values only (for -w)
  - added option alias called --match-filter for option --wanted-list-filter
  - added option alias called --expect for option --expect-hash
  - improved --info for CRCs:
    - added the polynomial representations: normal, reversed, and Koopman
    - added the reciprocal polynomial for CRCs
    - added binary and hex for each poly representation
    - added polynomial representations and CRC parameters also for optimized CRC implementations

- updates: